# GRAG

./: .env.example  .gitignore  PYTHON_UPGRADE_GUIDE.md  README.md  pyproject.toml  requirements.txt  supabase-rls-complete-fix.sql  supabase-rls-fix.sql  test_document.txt  test_frontend_upload.html  test_pymupdf.py  test_user_pdf.py  update_pydantic_v2.py
.clinerules/: db_schema.md  rag.md  rule.md
.github/workflows/: ci.yml
config/: history.md  plan.md  progress.md  todos.md
database/: README.md
database/docs/: project-overview.md
database/neo4j/: README.md
docker/: start-neo4j-manual.sh  start-neo4j.sh
docs/: configuration.md  llm-configuration.md
docs/agents/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/development/: README.md
docs/guides/: README.md
docs/history/: PROJECT.md
docs/migrations/: relationship_migration_guide.md
frontend/: README.md  package-lock.json  package.json  test-api.js
grag/: __init__.py  cli.py
grag/agents/: __init__.py  evidence_fusion.py  planner.py  query_parser.py  query_schemas.py  rag_agent.py  reasoning_agent.py  retrieval_agent.py  schemas.py  smart_router.py  tool_agent.py
grag/api/: app.py  schemas.py
grag/core/: __init__.py  cache_manager.py  config.py  constants.py  (+5 more)
infrastructure/: README.md
project/: ollama_client.py  plan.md  test_ollama.py  test_ollama_client.py  test_schema.py  test_vision_router.py  todos.md
scripts/: README.md  clear-databases.sh  run_server.sh  run_tests.py  test_agent.py  test_query_fix.py
tests/: README.md  integration_test.py  test_embedding_providers.py  test_langchain_ingestion.py  test_structured_query_parser.py  test_supabase.py  test_unified_knowledge_system.py  test_vector_direct.py  test_vector_search.py
(+70 files in other folders)
