[project]
name = "grag"
version = "0.1.0"
description = "GraphRAG + LLM + VLM driven Agentic RAG system"
authors = [{name = "Developer"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # === Core AI Frameworks ===
    "langchain>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "llama-index>=0.14.0,<0.15.0",
    # === Multimodal / Vision ===
    # Qwen2VL has been removed - using Ollama for local VLM instead
    "transformers>=4.40.0",
    "sentence-transformers>=2.3.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    # === Databases ===
    "neo4j>=5.20.0",
    "supabase>=1.0.0",
    # === API / Backend ===
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    # === Data Processing ===
    "pydantic>=2.0.0,<3.0.0",
    "python-multipart>=0.0.6",
    # === Optional ===
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
    "py2neo>=2021.2.3",
    "mineru>=2.6.4",
    "pydantic-settings>=2.0.0",
    "langchain-community>=0.4.1",
    "docx2txt>=0.9",
    "pypdf>=6.2.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "nest-asyncio>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grag"]

[project.scripts]
grag = "grag.cli:sync_main"
grag-cli = "grag.cli:sync_main"
grag-api = "grag.api.app:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]  # Line too long, we're okay with that here

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "pytest-asyncio>=1.3.0",
]
